# CircularBIM-AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
.streamlit/: config.toml
assets/: bim_heatmap.json  correlations.json  cv_details.json  distributions.json  eda_stats.json  hyperparameters.json  mcdm_results.json  model_results.json  reliability.json  sem_results.json  shap_data.json  style.css
models/: feature_columns.joblib  label_encoders.joblib  model_co2.joblib  model_co2_lgb.joblib  model_co2_svm.joblib  model_co2_xgb.joblib  model_recycling.joblib  model_recycling_lgb.joblib  model_recycling_svm.joblib  model_recycling_xgb.joblib  model_waste.joblib  model_waste_lgb.joblib  model_waste_svm.joblib  model_waste_xgb.joblib
pages/: 1_🔍_Explorer.py  2_🤖_Predictor.py  3_📊_Model_Insights.py  4_🏗️_Scenario_MCDM.py  5_📄_About.py
scripts/: export_models.py
src/: charts.py  config.py  construct_validation.py  data_loading.py  eda.py  inferential_modelling.py  mcdm.py  model.py  predictive_modelling.py  st_config.py  validation.py
