[project]
name = "sustainability-24-02-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factor-analyzer>=0.5.1",
    "joblib>=1.3.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.8.0",
    "mord>=0.7",
    "numpy>=1.26.0,<3",
    "openpyxl>=3.1.5",
    "optuna>=4.0.0",
    "pandas>=2.0.0,<3",
    "pingouin>=0.5.4",
    "plotly>=5.18.0",
    "pymcdm>=1.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "semopy>=2.3.0",
    "shap>=0.43.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.30.0",
    "xgboost>=2.0.0",
]
